# dependency-docs-collector

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
docs/guide/: installation.md  quickstart.md
tests/: conftest.py  test_main.py
